# luckee_incentive

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo_simple.toml  LICENSE  README.md  实现分析报告.md  项目状态报告.md
.github/workflows/: ci.yml
docs/: 01-结构化需求规格说明书.md  02-精确接口契约.md  03-架构与设计约束.md  04-非功能性需求量化指标.md  05-过程与决策记录.md  06-验证与质量保障.md  07-部署与运维.md
examples/: README.md
scripts/: deploy.sh
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
